--- a/dsa-in-python/chapter4-recursion.ipynb
+++ b/dsa-in-python/chapter4-recursion.ipynb
@@ -433,9 +433,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b62d484",
+   "metadata": {},
+   "source": [
+    "## Binary Recursion for summing elements of a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b63f7243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Slice: 0:11\n",
+      "Slice 1: 0:5, Slice 2: 5:11\n",
+      "\n",
+      "Slice: 0:5\n",
+      "Slice 1: 0:2, Slice 2: 2:5\n",
+      "\n",
+      "Slice: 0:2\n",
+      "Slice 1: 0:1, Slice 2: 1:2\n",
+      "\n",
+      "Slice: 0:1\n",
+      "Slice: 1:2\n",
+      "Slice: 2:5\n",
+      "Slice 1: 2:3, Slice 2: 3:5\n",
+      "\n",
+      "Slice: 2:3\n",
+      "Slice: 3:5\n",
+      "Slice 1: 3:4, Slice 2: 4:5\n",
+      "\n",
+      "Slice: 3:4\n",
+      "Slice: 4:5\n",
+      "Slice: 5:11\n",
+      "Slice 1: 5:8, Slice 2: 8:11\n",
+      "\n",
+      "Slice: 5:8\n",
+      "Slice 1: 5:6, Slice 2: 6:8\n",
+      "\n",
+      "Slice: 5:6\n",
+      "Slice: 6:8\n",
+      "Slice 1: 6:7, Slice 2: 7:8\n",
+      "\n",
+      "Slice: 6:7\n",
+      "Slice: 7:8\n",
+      "Slice: 8:11\n",
+      "Slice 1: 8:9, Slice 2: 9:11\n",
+      "\n",
+      "Slice: 8:9\n",
+      "Slice: 9:11\n",
+      "Slice 1: 9:10, Slice 2: 10:11\n",
+      "\n",
+      "Slice: 9:10\n",
+      "Slice: 10:11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def binary_sum(s, start, stop):\n",
+    "    \"\"\"\n",
+    "        Return the sum of the numbers in the implicit slice s[start:stop].\n",
+    "        Uses O(log(n)) additional space\n",
+    "    \"\"\"\n",
+    "    print(f\"Slice: {start}:{stop}\")\n",
+    "    if start >= stop:\n",
+    "        return 0 # zero elements in the slice\n",
+    "    elif start == stop - 1:\n",
+    "        return s[start] # one element in slice\n",
+    "    else:\n",
+    "        # recursive step\n",
+    "        mid = (start + stop) // 2\n",
+    "        print(f\"Slice 1: {start}:{mid}, Slice 2: {mid}:{stop}\\n\")\n",
+    "        return binary_sum(s, start, mid) + binary_sum(s, mid, stop)\n",
+    "    \n",
+    "test = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "binary_sum(test, 0, len(test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e1c4d3",
+   "metadata": {},
+   "source": [
+    "## Eliminating Tail Recursion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d61010",
+   "id": "0c0fb08b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search_recursive(data, target, low, high):\n",
+    "    \"\"\"\n",
+    "        Return True if target is found in the given Python list.\n",
+    "    \"\"\"\n",
+    "    if low > high:\n",
+    "        return False\n",
+    "    else: \n",
+    "        mid = (low + high) // 2\n",
+    "        \n",
+    "        if target == data[mid]:\n",
+    "            return True\n",
+    "        elif target < data[mid]:\n",
+    "            return binary_search(data, target, low, mid - 1)\n",
+    "        else:\n",
+    "            return binary_search(data, target, mid + 1, high)\n",
+    "\n",
+    "def binary_search_iterative(data, target):\n",
+    "    \"\"\"\n",
+    "        Return True if target is found in the given Python list.\n",
+    "    \"\"\"\n",
+    "    low = 0\n",
+    "    high = len(data) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if target == data[mid]:\n",
+    "            return True\n",
+    "        elif target < data[mid]:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd020662",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse_values_recursively(s, start, stop):\n",
+    "    \"\"\"\n",
+    "        Reverse elements in implicit slice s[start:stop].\n",
+    "    \"\"\"\n",
+    "    if start <= stop - 1:\n",
+    "        s[start], s[stop - 1] = s[stop - 1], s[start]\n",
+    "        reverse_values_recursively(s, start + 1, stop - 1)\n",
+    "    \n",
+    "test_arr = [1, 2, 3, 4 ,5]\n",
+    "\n",
+    "reverse_values(test_arr, 0, len(test_arr))\n",
+    "\n",
+    "test_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "aff60fd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse_values_iteratively(s):\n",
+    "    \"\"\"\n",
+    "        Reverse elements in implicit slice s[start:stop].\n",
+    "    \"\"\"\n",
+    "    start = 0\n",
+    "    stop = len(s)\n",
+    "    \n",
+    "    while start < stop - 1:\n",
+    "        s[start], s[stop - 1] = s[stop - 1], s[start]\n",
+    "        start += 1\n",
+    "        stop -= 1\n",
+    "        \n",
+    "reverse_values_iteratively(test_arr)\n",
+    "\n",
+    "test_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bc05fd7",
    "metadata": {},
    "outputs": [],
    "source": []
