--- a/articles/python-list-article.ipynb
+++ b/articles/python-list-article.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ca78eb0",
+   "id": "4e78e2e1",
    "metadata": {},
    "source": [
     "# The Python list data structure"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "30148fc7",
+   "execution_count": 53,
+   "id": "6b872dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "237388fb",
+   "execution_count": 73,
+   "id": "d9c5ecf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,17 +30,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b22e921c",
-   "metadata": {},
-   "source": [
-    "## Inserting and removing from a list"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "06613123",
+   "execution_count": 74,
+   "id": "310d1c8a",
    "metadata": {},
    "outputs": [
     {
@@ -84,17 +76,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e8c2d09e",
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "f2fd69b7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n",
+      "140657513265008\n",
+      "140657513504816\n",
+      "140657513905648\n"
+     ]
+    }
+   ],
    "source": [
-    "## Increasing the size of a list"
+    "print(my_list)\n",
+    "\n",
+    "for i in my_list:\n",
+    "    print(id(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "d6d19fcd",
+   "execution_count": 133,
+   "id": "6b01500d",
    "metadata": {},
    "outputs": [
     {
@@ -157,17 +165,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4de00ead",
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dcd81c37",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## The Python Array data structure"
+    "import array as arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "0843cfe6",
+   "execution_count": 134,
+   "id": "e58e4660",
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +193,6 @@
     }
    ],
    "source": [
-    "import array as arr\n",
-    "\n",
-    "\n",
     "my_array = arr.array('i', [1, 2, 3])\n",
     "seq_info(my_array)\n",
     "\n",
@@ -203,17 +210,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e3daa8d",
-   "metadata": {},
-   "source": [
-    "## Increasing the size of an Array"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "e09ec234",
+   "execution_count": 135,
+   "id": "4421c967",
    "metadata": {},
    "outputs": [
     {
@@ -276,17 +275,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "909639d2",
-   "metadata": {},
-   "source": [
-    "## Creating a Dynamic Array"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "aac9c09c",
+   "execution_count": 121,
+   "id": "8e847da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,17 +351,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ce338aa0",
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "a1b8739e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Increasing the  size of the DynamicArray"
+    "da = DynamicArray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "c586a9c6",
+   "execution_count": 146,
+   "id": "0b823352",
    "metadata": {
     "scrolled": false
    },
@@ -429,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c355f28",
+   "id": "7d5bf2b7",
    "metadata": {},
    "outputs": [],
    "source": []
