removed all id() code

--- a/articles/python-list-article.ipynb
+++ b/articles/python-list-article.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4e78e2e1",
+   "id": "b68a0fe6",
    "metadata": {},
    "source": [
     "# The Python list data structure"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6b872dda",
+   "id": "83748504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d9c5ecf4",
+   "id": "5677cdbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "310d1c8a",
+   "id": "fce70290",
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "f2fd69b7",
+   "execution_count": 167,
+   "id": "a228b7ce",
    "metadata": {},
    "outputs": [
     {
@@ -86,9 +86,9 @@
      "output_type": "stream",
      "text": [
       "['a', 'b', 'c']\n",
-      "140657513265008\n",
-      "140657513504816\n",
-      "140657513905648\n"
+      "Memory address: 140657513265008\n",
+      "Memory address: 140657513504816\n",
+      "Memory address: 140657513905648\n"
      ]
     }
    ],
@@ -96,13 +96,72 @@
     "print(my_list)\n",
     "\n",
     "for i in my_list:\n",
-    "    print(id(i))"
+    "    print(\"Memory address: {}\".format(id(i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "d733e3e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140657513504816\n",
+      "140657513265008\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(my_list[1]))\n",
+    "print(id(my_list[0]) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "a039a41b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(my_list[1]) == (id(my_list[0]) + 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "85e646ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(id(my_list[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "6b01500d",
+   "id": "9943b941",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "dcd81c37",
+   "id": "f43037cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "e58e4660",
+   "id": "03e81d54",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "4421c967",
+   "id": "b8a628d1",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "8e847da2",
+   "id": "0c33ae45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "a1b8739e",
+   "id": "64f6cb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0b823352",
+   "id": "c69afa4c",
    "metadata": {
     "scrolled": false
    },
@@ -422,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5bf2b7",
+   "id": "bcc3dde0",
    "metadata": {},
    "outputs": [],
    "source": []
